--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div>
 
         </div>
-        <a href="https://github.com/uttamkatiyar96645?tab=repositories" target="_blank">&lt;Source Code&gt;</a>
+        <a href="https://github.com/uttamkatiyar96645/Sorting-Visualizer-" target="_blank">&lt;Source Code&gt;</a>
     </footer>
 
     <script src="./Scripts/main.js"></script>
